--- a/src/components/mainContent/MainContent.module.css
+++ b/src/components/mainContent/MainContent.module.css
@@ -21,6 +21,7 @@ h5{
     display: inline-block;
     padding: 3px;
     font-weight: 100;
+    margin-left: 10px;
 }
 .footer{
     background-color: #545454;
