--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -11,6 +11,7 @@ header{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 h1{
     text-transform: uppercase;
