--- a/src/components/mainContent/MainContent.module.css
+++ b/src/components/mainContent/MainContent.module.css
@@ -36,3 +36,62 @@ h5{
     width: auto;
     height: 333px;
 }
+.movieBageWrapper{
+    background-image: url(../../img/bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding-bottom: 30px;
+    padding-top: 10px;
+}
+.movieBageWrapper img{
+    width: auto;
+    height: 333px;
+
+}
+.movieCard{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+}
+.movieCard h2{
+    color: #ffffff;
+    font-weight: 200;
+    margin: 0;
+}
+.movieCard .textWrap{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.movieCard .rating{
+    border-radius: 50%;
+    border: #ffffff 1px solid;
+    color: #8DB36C;
+    padding: 12px;
+    margin-left: 5px;
+}
+.movieCard .number{
+    color: #f65261;
+    font-weight: 300;
+    font-size: 24px;
+}
+.number:nth-child(2){
+    margin-left: 10px;
+}
+.textWrap p:first-of-type{
+    color: #ffffff;
+    font-weight: 100;
+    font-size: 11px;
+    margin: 0;
+    margin-top: 30px;
+}
+.textWrap p:last-child{
+    color: #ffffff;
+    font-weight: 100;
+    margin-top: 30px;
+}
+.textWrap{
+    margin-left: 60px;
+}
