--- a/src/components/mainContent/MainContent.module.css
+++ b/src/components/mainContent/MainContent.module.css
@@ -10,6 +10,14 @@
 }
 .cardWrapper{
     color: #929292;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    flex-basis: 33%;
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: space-evenly;
+    text-align: center;
+    cursor: pointer;
 }
 h5{
     border: 1px #b8b8b8 solid;
