--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -13,12 +13,13 @@
   color: #929292;
   margin-bottom: 20px;
   margin-top: 20px;
-  flex-basis: 33%;
-  margin-left: 0;
-  margin-right: 0;
+  flex-basis: 32%;
+  margin-left: 5px;
+  margin-right: 5px;
   justify-content: space-evenly;
   text-align: center;
   cursor: pointer;
+  inline-size: min-content;
 }
 h5 {
   border: 1px #b8b8b8 solid;
