--- a/src/components/infobar.module.css
+++ b/src/components/infobar.module.css
@@ -1,31 +1,30 @@
-.infoBar{
-    background-color: #545454;
-    padding-top: 20px;
+.infoBar {
+  background-color: #545454;
+  padding-top: 20px;
 }
-.container{
-    padding-left: 10px;
-    padding-right: 10px;
-    display: flex;
+.container {
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
 }
-.counterWrapper p{
-    margin-top: 8px;
-    color: #ffffff;
+.counterWrapper p {
+  margin-top: 8px;
+  color: #ffffff;
 }
-main{
-    background-color: #232323;
+main {
+  background-color: #232323;
 }
-.movieWrapper{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.movieWrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
-
-
-
-
-
-
-
-
-
+.loader {
+  width: 200px;
+  height: 200px;
+  background-image: url(../img/Spinner-1s-614px.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
