--- a/src/components/infobar.module.css
+++ b/src/components/infobar.module.css
@@ -28,3 +28,12 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.notfound {
+  background-color: #545454;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 100;
+  height: 60vh;
+  padding-top: 100px;
+}
