--- a/src/components/infobar.module.css
+++ b/src/components/infobar.module.css
@@ -29,11 +29,11 @@ main {
   background-size: cover;
 }
 .notfound {
-  background-color: #545454;
+  /* background-color: #545454; */
   color: #ffffff;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 100;
-  height: 60vh;
-  padding-top: 100px;
+  height: 30vh;
+  padding-top: 50px;
 }
