--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -66,7 +66,7 @@ h5 {
   flex-wrap: wrap;
   flex-direction: column;
 }
-small{
+small {
   display: block;
   font-weight: 100;
   font-style: italic;
@@ -111,4 +111,12 @@ small{
   margin-bottom: 30px;
   font-weight: 100;
   cursor: pointer;
+}
+.similar {
+  color: white;
+  font-weight: 100;
+  font-size: 24px;
+  padding: 10px;
+  border-left: outset;
+  border-color: red;
 }
